Style card filter tag | margin wrap fix

--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -76,7 +76,7 @@
 
   .noCard {
     display: none;
-    margin-top: 50px;
+    margin: 50px auto 0;
     text-align: center;
   }
 }
