--- a/assets/sass/components/_filter.scss
+++ b/assets/sass/components/_filter.scss
@@ -41,6 +41,7 @@
     &-btn {
       display: flex;
       align-items: center;
+      justify-content: flex-end;
       width: 20%;
       background: none;
       border: none;
@@ -62,14 +63,14 @@
     }
 
     &-items {
-      background-color: $color-blue;
-      height: 10px;
-      width: 100%;
       position: absolute;
-      left: 0;
-      bottom: 0;
       display: flex;
       flex-direction: column;
+      flex-flow: wrap;
+      width: calc(100% - 40px);
+      padding: 0 20px 20px 20px;
+      left: 0;
+      top: 68px;
       visibility: hidden;
 
       &.ingredient {
@@ -98,6 +99,8 @@
     } 
 
     &[data-active="true"]  {
+      width: 380px;
+
       .filter-items {
         visibility: visible;
       }
@@ -105,7 +108,8 @@
 
     &-item {
       font-size: 18px;
-      width: 120px;
+      padding: 5px;
+      width: calc(33.33% - 10px);
 
       a {
         color: $color-white;
@@ -118,6 +122,10 @@
   .filters {
     .filter {
       margin: 20px 20px 0 0;
+
+      &:last-of-type {
+        margin: 20px 0 0 0;
+      }
     }
   }
 }
