--- a/assets/sass/components/_tag.scss
+++ b/assets/sass/components/_tag.scss
@@ -1,5 +1,6 @@
 .tags {
   display: flex;
+  flex-flow: wrap;
   
   .tag {
     display: flex;
